// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nix Extension > search-home-manager-options > given a valid Home Manager option query > then it should return formatted option results 1`] = `
"1 result(s)

  # │ type        │ option
────┼─────────────┼───────────────────────────────────────────────────────────────────────────────────
  1 │ boolean     │ programs.git.enable
    │             │ Whether to enable Git.
    │             │ default: false
    │             │ example: true
    │             │ https://github.com/nix-community/home-manager/blob/master/modules/programs/git.nix"
`;

exports[`Nix Extension > search-nix-options > given a valid option query > then it should return formatted option results 1`] = `
"1 result(s)

  # │ type        │ option
────┼─────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  1 │ boolean     │ services.httpd.enable
    │             │ Whether to enable the Apache HTTP Server.
    │             │ default: false
    │             │ example: true
    │             │ https://github.com/NixOS/nixpkgs/blob/nixos-unstable/nixos/modules/services/web-servers/apache-httpd/default.nix"
`;

exports[`Nix Extension > search-nix-packages > given a valid package query > then it should return formatted package results 1`] = `
"1 result(s)

  # │ version │ package
────┼─────────┼──────────────────────────────────────────────────────────────────────────────────────────────────
  1 │ 2.12.1  │ hello
    │         │ A simple hello world program
    │         │ attr: hello · GPL-3.0-or-later
    │         │ John Doe
    │         │ https://www.gnu.org/software/hello/
    │         │ https://github.com/NixOS/nixpkgs/blob/nixos-unstable/pkgs/applications/misc/hello/default.nix#L35"
`;
